Implements IInstanceData and automatic filling.

--- a/src/Simplic.Data/Simplic.Data.csproj
+++ b/src/Simplic.Data/Simplic.Data.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IExternalDataBase.cs" />
+    <Compile Include="IInstanceData.cs" />
     <Compile Include="IModelIdentity.cs" />
     <Compile Include="IRepositoryBase.cs" />
     <Compile Include="NoSql\IDatabaseContext.cs" />
