--- a/src/Simplic.Data/Simplic.Data.csproj
+++ b/src/Simplic.Data/Simplic.Data.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Fluent\FluentTransactionService.cs" />
     <Compile Include="Fluent\IFluentTransactionService.cs" />
     <Compile Include="IExternalDataBase.cs" />
+    <Compile Include="IModel.cs" />
     <Compile Include="IModelIdentity.cs" />
     <Compile Include="IRepositoryBase.cs" />
     <Compile Include="Transaction\ITransaction.cs" />
