--- a/src/Simplic.Data.Web/Simplic.Data.Web.csproj
+++ b/src/Simplic.Data.Web/Simplic.Data.Web.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>1.0.22.422</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.122.422</Version>
   </PropertyGroup>
 
   <ItemGroup>
